# linguistic_exercise_generator

./: constants.py  exercise.py  main.py  pyproject.toml  requirements.txt  test_text_file.txt  text_file.txt
src/: constants.py  exercise.py  files.py  main.py  word.py
tests/: test_exercise.py  test_files.py  test_textprocessor.py
text_collection/: harry-potter.txt  text_file.txt
