[tool.poetry]
name = "linguistic-exercise-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
gensim = "^4.3.2"
navec = "^0.10.0"
pymorphy2= "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
